--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="app/app.a9f62185d9ea5447bd7d.css" rel="stylesheet"></head>
 
 <body>
-<section class="loading">Loading app ...</section>
+<section class="loading">Loading app ....</section>
 <section class="todoapp cloak">
     <div class="header">
         <h1 id="title">Simplistic ToDo</h1>
