--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<section class="loading">Loading app ....</section>
+<section class="loading">Loading app ...</section>
 <section class="todoapp cloak">
     <div class="header">
         <h1 id="title">Simplistic ToDo</h1>
