--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <section class="todoapp cloak">
     <div class="header">
         <h1 id="title">Simplistic ToDo</h1>
-        <h4>A most simplistic ToDo List in modern JavaScript.</h4>
+        <h4>A simplistic ToDo List in modern JavaScript.</h4>
 
     </div>
 
