--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Simplistic ToDo</title>
+    <title>Simplistic ToDo!</title>
     <link rel="shortcut icon" href="./asset/favicon.ico">
     <style>
         .cloak {
