--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Simplistic ToDo</title>
+    <title>Simplistic ToDo!</title>
     <link rel="shortcut icon" href="./asset/favicon.ico">
     <style>
         .cloak {
@@ -11,7 +11,7 @@
         }
     </style>
 
-<link href="app/app.0aac8319c82a00510993.css" rel="stylesheet"></head>
+<link href="app/app.3731917c7598b1e0a84f.css" rel="stylesheet"></head>
 
 <body>
 <section class="loading">Loading app ...</section>
@@ -36,6 +36,6 @@
     <p>JavaScript Example / Initial template from <a href="https://github.com/tastejs/todomvc-app-template">todomvc-app-template</a>
     </p>
 </footer>
-<script type="text/javascript" src="app/manifest.5de9c9f9fd087cec7e8b.js"></script><script type="text/javascript" src="app/vendor.fe3fffd683690b79e239.js"></script><script type="text/javascript" src="app/app.0aac8319c82a00510993.js"></script></body>
+<script type="text/javascript" src="app/manifest.f0c1c5eb35149a737080.js"></script><script type="text/javascript" src="app/vendor.fe3fffd683690b79e239.js"></script><script type="text/javascript" src="app/app.3731917c7598b1e0a84f.js"></script></body>
 
 </html>
