--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <section class="loading">Loading app ...</section>
 <section class="todoapp cloak">
     <div class="header">
-        <h1 id="title">Simplistic ToDo!</h1>
+        <h1 id="title">Simplistic ToDo</h1>
         <h4>A simplistic ToDo List in modern JavaScript.</h4>
 
     </div>
